# aki

./: .coverage  .dockerignore  .gitignore  .python-version  Dockerfile  README.md  install-aki.py  pyproject.toml  release.sh  tox.ini
.github/workflows/: publish_docker_packages.yaml
aki/: _colorize.py  _config.py  _dict_parse_utils.py  _docker_client.py  _print.py  action.py  cli.py  config_key.py  error.py  platform_info.py  volume.py
sample/: aki.sh  aki.yaml  docker-compose.yaml  sample-aki.sh
sample/.git-hooks/: post-checkout
tests/integration/: test_cli.py
tests/resources/py/: test_py_code.py
tests/resources/yaml/: aki.yaml  docker-compose.yaml
tests/unit/: test_action.py  test_colorize.py  test_config.py
