[tool.poetry]
name = "aki"
version = "0.10.4"
description = ""
authors = ["nroulon <nicolas.roulon@4sh.fr>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
docker = "^7.0.0"
python-dotenv = "^1.0.1"
PyYAML = "6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
yapf = "^0.40.2"
tox = "^4.15.0"
coverage = "^7.5.0"

[tool.pytest.ini_options]
addopts = "--ignore sample --ignore tests/resources"

[tool.poetry.scripts]
aki = "aki.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
